Enabling profiling in training program; printing out round number within loss; creating seperate training programs for gradient accum strats (send back and add on host side vs. fetch back each round)

--- a/backends/nvidia/src/handle/Makefile
+++ b/backends/nvidia/src/handle/Makefile
@@ -12,9 +12,9 @@ SELF_INCLUDE_DIR = ../../include
 
 ALL_INCLUDES = -I${SELF_INCLUDE_DIR} -I${DATAFLOW_INCLUDE_DIR} -I${CUDA_INCLUDE_DIR}
 
-ALL_OBJS = objs/cuda_drv.o objs/cuda_dataflow_handle.o
+ALL_OBJS = objs/cuda_drv.o objs/cuda_profiler.o objs/cuda_dataflow_handle.o
 
-OTHER_LIB_DEPENDS = ${CUDA_LIB_DEPENDS} -L${DATAFLOW_LIB_DIR} -ldataflow -Wl,-rpath,${DATAFLOW_LIB_DIR} -Wl,-rpath,${CUDA_LIB_DIR} -Wl,--enable-new-dtags
+OTHER_LIB_DEPENDS = -pthread -ldl ${CUDA_LIB_DEPENDS} -L${DATAFLOW_LIB_DIR} -ldataflow -Wl,-rpath,${DATAFLOW_LIB_DIR} -Wl,-rpath,${CUDA_LIB_DIR} -Wl,--enable-new-dtags
 
 LIB_NAME = libcuda_dataflow_handle.so
 
@@ -25,6 +25,11 @@ LIB_NAME = libcuda_dataflow_handle.so
 ## Interface to Cuda Driver
 
 objs/cuda_drv.o: src/cuda_drv.c
+	${CC} ${CFLAGS} ${ALL_INCLUDES} -c $< -o $@
+
+
+## Cuda Profiler
+objs/cuda_profiler.o: src/cuda_profiler.c
 	${CC} ${CFLAGS} ${ALL_INCLUDES} -c $< -o $@
 
 
