Correcting retry logic for flash builds to ensure rest of top-level build continues after success...

--- a/backends/nvidia/src/ops/Makefile
+++ b/backends/nvidia/src/ops/Makefile
@@ -144,32 +144,33 @@ lib/external/${EXTERNAL_OP_ATTENTION_LIB}: build_flash2_lib build_flash3_lib ${E
 
 # Retry loops for flash libs because nvcc sometimes has errors...
 build_flash3_lib:
-	for i in $$(seq 1 20); do \
-		if ${MAKE} -C ${FLASH3_DIR}; then \
-			echo "Successfully built flash3 lib."; \
-			exit 0; \
-		fi; \
-		if [ $$i -lt 20 ]; then \
-			echo "make -C ${FLASH3_DIR} failed. Retrying (attempt $$i/20)..."; \
-			sleep 10; \
-		fi; \
-	done; \
-	echo "Error: Failed to build flash3 lib after 10 attempts. Something is likely wrong..."; \
-	exit 1;
+    @for i in $$(seq 1 20); do \
+        if ${MAKE} -C ${FLASH3_DIR}; then \
+            echo "Successfully built flash3 lib."; \
+            break; \
+        fi; \
+        if [ $$i -eq 20 ]; then \
+            echo "Error: Failed to build flash3 lib after 20 attempts. Something is likely wrong..."; \
+            exit 1; \
+        fi; \
+        echo "make -C ${FLASH3_DIR} failed. Retrying (attempt $$i of 20)..."; \
+        sleep 10; \
+    done
 
 build_flash2_lib:
-	for i in $$(seq 1 20); do \
-		if ${MAKE} -C ${FLASH2_DIR}; then \
-			echo "Successfully built flash2 lib."; \
-			exit 0; \
-		fi; \
-		if [ $$i -lt 20 ]; then \
-			echo "make -C ${FLASH2_DIR} failed. Retrying (attempt $$i/20)..."; \
-			sleep 10; \
-		fi; \
-	done; \
-	echo "Error: Failed to build flash2 lib after 10 attempts. Something is likely wrong..."; \
-	exit 1;
+    @for i in $$(seq 1 20); do \
+        if ${MAKE} -C ${FLASH2_DIR}; then \
+            echo "Successfully built flash2 lib."; \
+            break; \
+        fi; \
+        if [ $$i -eq 20 ]; then \
+            echo "Error: Failed to build flash2 lib after 20 attempts. Something is likely wrong..."; \
+            exit 1; \
+        fi; \
+        echo "make -C ${FLASH2_DIR} failed. Retrying (attempt $$i of 20)..."; \
+        sleep 10; \
+    done
+
 
 ${EXTERNAL_OP_PATH}/attention_helper/objs/attention_helper.o: ${EXTERNAL_OP_PATH}/attention_helper/src/attention_helper.c
 	${CC} ${CFLAGS} ${EXTERNAL_OP_ATTENTION_LIB_ALL_INCLUDES} -c $< -o $@
