--- a/test/dataflow_models/Makefile
+++ b/test/dataflow_models/Makefile
@@ -30,7 +30,7 @@ ALL_INCLUDES = -I${DATAFLOW_LIB_INCLUDE_DIR} -I${CUDA_DATAFLOW_BACKEND_INCLUDE_D
 ALL_LIBS = -L${DATAFLOW_LIB_DIR} -L${CUDA_DATAFLOW_BACKEND_LIB_DIR} -L${DATAFLOW_OPS_LIB_DIR} -L${DATAFLOW_MODELS_LIB_DIR} -L${HOST_OPS_LIB_DIR} ${DATAFLOW_LIB} ${CUDA_DATAFLOW_BACKEND_LIBS} ${DATAFLOW_OPS_LIB} ${DATAFLOW_MODELS_LIB} ${HOST_OPS_LIB} -Wl,-rpath,${DATAFLOW_LIB_DIR} -Wl,-rpath,${CUDA_DATAFLOW_BACKEND_LIB_DIR} -Wl,-rpath,${DATAFLOW_OPS_LIB_DIR} -Wl,-rpath,${DATAFLOW_MODELS_LIB_DIR} -Wl,-rpath,${HOST_OPS_LIB_DIR}
 
 #EXECS = naiveTransformer transformerHostAccumOpt transformerHostOpt transformer
-EXECS = transformer
+EXECS = transformer transformerRecompute
 
 all: create_data_dirs ${EXECS}
 
@@ -58,6 +58,10 @@ create_data_dirs:
 	mkdir -p correct_transformer_data/optimizer_states; \
 	mkdir -p profiling
 
+
+## version where activations can exceed host memory capacity and we selectively decide which acts to save, and if not saved then recompute before doing bwds...
+transformerRecompute: transformer_recompute.c
+	${CC} ${CFLAGS} ${ALL_INCLUDES} $^ -o $@ ${ALL_LIBS}
 
 ## version where host just stores temporary data and all ops are on device
 transformer: transformer.c
