--- a/bench/reproduce_results/sweep_config_1B_5090.json
+++ b/bench/reproduce_results/sweep_config_1B_5090.json
@@ -1,5 +1,5 @@
 {
-    "host_mem_gb": [8, 12, 16, 24, 32, 48, 64, 80, 96, 112, 128, 144, 160, 176],
+    "host_mem_gb": [16, 24, 32, 48, 64, 80, 96, 112, 128, 144, 160, 176],
     "device_mem_gb": [12, 16, 20, 24, 28, 30],
     "seq_len": [256, 512, 1024, 2048, 4096, 8192, 12288, 16384, 32768, 65536, 131072, 262144, 524288, 1048576],
     "model_size": [1]
