Updating sweep config for 3090 machine

--- a/bench/reproduce_results/sweep_config_1B_3090.json
+++ b/bench/reproduce_results/sweep_config_1B_3090.json
@@ -1,6 +1,6 @@
 {
     "host_mem_gb": [16, 32, 48, 64, 80, 96, 112],
-    "device_mem_gb": [12, 14, 16, 18, 20, 22],
+    "device_mem_gb": [16, 18, 20, 22],
     "seq_len": [512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144, 524288, 1048576],
     "model_size": [1]
 }
