--- a/bench/reproduce_results/sweep_config_8B_h100.json
+++ b/bench/reproduce_results/sweep_config_8B_h100.json
@@ -1,6 +1,6 @@
 {
-    "host_mem_gb": [80, 96, 112, 128, 144, 160, 176, 188],
+    "host_mem_gb": [80, 96, 112, 128, 144, 160, 176],
     "device_mem_gb": [30, 40, 50, 60, 70, 78],
-    "seq_len": [512, 4096, 8192, 16384, 32768, 65536, 131072, 262144],
+    "seq_len": [512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144],
     "model_size": [8]
 }
