--- a/bench/reproduce_results/sweep_config_8B_3090.json
+++ b/bench/reproduce_results/sweep_config_8B_3090.json
@@ -1,6 +1,6 @@
 {
     "host_mem_gb": [80, 96, 112],
-    "device_mem_gb": [18, 20, 22, 24, 26, 28, 30],
+    "device_mem_gb": [18, 20, 22],
     "seq_len": [2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144],
     "model_size": [8]
 }
