--- a/bench/reproduce_results/sweep_config_1B_5090.json
+++ b/bench/reproduce_results/sweep_config_1B_5090.json
@@ -1,6 +1,6 @@
 {
     "host_mem_gb": [16, 32, 48, 64, 80, 96, 112, 128, 144, 160, 176],
     "device_mem_gb": [16, 20, 24, 28, 30],
-    "seq_len": [512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144],
+    "seq_len": [512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144, 524288, 1048576],
     "model_size": [1]
 }
