Ensure gradient checkpointing is true

--- a/bench/reproduce_results/other_solutions/huggingface/deepspeed_config.yaml
+++ b/bench/reproduce_results/other_solutions/huggingface/deepspeed_config.yaml
@@ -27,6 +27,7 @@ deepspeed_config:
 
   bf16:
     enabled: true
+    optimizer_dtype: bf16
 
   activation_checkpointing:
     partition_activations: true
