--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -25,5 +25,14 @@
         "start_run_ind": 0,
         "total_steps": 7,
         "warmup_steps": 2
+    },
+    "rtx5090_8b_long": {
+        "host_mem_gb": [80, 96, 112, 128, 144, 160, 176],
+        "device_mem_gb": [18, 20, 22, 24, 26, 28, 30],
+        "seq_len": [32768, 65536, 131072, 262144],
+        "model_size": [8],
+        "start_run_ind": 0,
+        "total_steps": 7,
+        "warmup_steps": 2
     }
 }
