--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -44,6 +44,24 @@
         "total_steps": 7,
         "warmup_steps": 2
     },
+    "a100_8b_medium": {
+        "host_mem_gb": [64, 80, 96, 112, 128, 144],
+        "device_mem_gb": [24, 30, 40, 50, 60, 70, 78],
+        "seq_len": [32768, 65536, 131072],
+        "model_size": [8],
+        "start_run_ind": 0,
+        "total_steps": 7,
+        "warmup_steps": 2
+    },
+    "a100_8b_long": {
+        "host_mem_gb": [128, 160, 192, 224, 256],
+        "device_mem_gb": [24, 30, 40, 50, 60, 70, 78],
+        "seq_len": [262144, 524288],
+        "model_size": [8],
+        "start_run_ind": 0,
+        "total_steps": 4,
+        "warmup_steps": 1
+    },
     "rtx5090_8b_long": {
         "host_mem_gb": [80, 96, 112, 128, 144, 160, 176],
         "device_mem_gb": [18, 20, 22, 24, 26, 28, 30],
