--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -71,4 +71,13 @@
         "total_steps": 7,
         "warmup_steps": 2
     }
+    "rtx3090_8b_long": {
+        "host_mem_gb": [80, 88, 96, 104, 112],
+        "device_mem_gb": [18, 20, 22],
+        "seq_len": [32768, 65536, 131072, 262144],
+        "model_size": [8],
+        "start_run_ind": 0,
+        "total_steps": 4,
+        "warmup_steps": 1
+    }
 }
