--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -2,7 +2,7 @@
     "h100_1b_short": {
         "host_mem_gb": [16, 24, 32, 40],
         "device_mem_gb": [16, 20, 24, 28, 32, 78],
-        "seq_len": [512, 1024, 2048, 4096, 8192, 16384],
+        "seq_len": [512, 1024, 2048, 4096, 8192, 16384, 32768],
         "model_size": [1],
         "start_run_ind": 0,
         "total_steps": 50,
@@ -35,6 +35,15 @@
         "total_steps": 4,
         "warmup_steps": 1
     },
+    "h100_8b_extra_long": {
+	"host_mem_gb": [224, 256, 288, 320, 356],
+        "device_mem_gb": [24, 30, 40, 50, 60, 70, 78],
+        "seq_len": [524288],
+        "model_size": [8],
+        "start_run_ind": 0,
+        "total_steps": 4,
+        "warmup_steps": 1
+    },
     "a100_8b_short": {
         "host_mem_gb": [60, 65, 70, 75],
         "device_mem_gb": [24, 30, 40, 50, 60, 70, 78],
@@ -57,6 +66,15 @@
         "host_mem_gb": [128, 160, 192, 224, 256],
         "device_mem_gb": [24, 30, 40, 50, 60, 70, 78],
         "seq_len": [262144, 524288],
+        "model_size": [8],
+        "start_run_ind": 0,
+        "total_steps": 4,
+        "warmup_steps": 1
+    },
+    "a100_8b_extra_long": {
+        "host_mem_gb": [224, 256, 288, 320, 356],
+        "device_mem_gb": [24, 30, 40, 50, 60, 70, 78],
+        "seq_len": [524288],
         "model_size": [8],
         "start_run_ind": 0,
         "total_steps": 4,
