--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -98,6 +98,15 @@
         "total_steps": 7,
         "warmup_steps": 2
     },
+    "rtx3090_1b_long": {
+        "host_mem_gb": [48, 64, 80, 96, 112],
+        "device_mem_gb": [16, 18, 20, 22],
+        "seq_len": [65536, 131072, 262144, 524288],
+        "model_size": [1],
+        "start_run_ind": 0,
+        "total_steps": 7,
+        "warmup_steps": 2
+    },
     "rtx3090_8b_short": {
         "host_mem_gb": [64, 72, 80, 88, 96],
         "device_mem_gb": [18, 20, 22],
