Update config options

--- a/models/llama3_8b_config.json
+++ b/models/llama3_8b_config.json
@@ -1,12 +1,18 @@
 {
-    "dtype": "bf16",
+    "embed_dtype": "bf16",
+    "attn_dtype": "bf16",
+    "expert_dtype": "bf16",
+    "head_dtype": "bf16",
     "vocab_size": 128256,
     "model_dim": 4096,
     "n_layers": 32,
     "n_heads": 32,
     "n_kv_heads": 8,
+    "qk_norm_type": "none",
+    "qk_norm_weight_type": "none",
     "num_shared_experts": 1,
     "num_routed_experts": 0,
+    "top_k_routed_experts": 0,
     "expert_dim": 14336,
     "expert_mlp_type": "swiglu",
     "rope_theta": 500000,
