--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -63,18 +63,18 @@
         "warmup_steps": 1
     },
     "a100_1b_short": {
-        "host_mem_gb": [16, 24, 32, 40],
+        "host_mem_gb": [16, 24, 32, 40, 48],
         "device_mem_gb": [16, 20, 24, 28, 32, 78],
-        "seq_len": [512, 1024, 2048, 4096, 8192, 16384, 32768],
+        "seq_len": [512, 1024, 2048, 4096, 8192, 16384, 32768, 65536],
         "model_size": [1],
         "start_run_ind": 0,
-        "total_steps": 50,
-        "warmup_steps": 20
+        "total_steps": 15,
+        "warmup_steps": 5
     },
     "a100_1b_medium": {
         "host_mem_gb": [16, 32, 48, 64, 80],
         "device_mem_gb": [16, 20, 24, 28, 32, 78],
-        "seq_len": [65536, 131072, 262144],
+        "seq_len": [131072, 262144],
         "model_size": [1],
         "start_run_ind": 0,
         "total_steps": 8,
