--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -214,5 +214,14 @@
 	"start_run_ind": 0,
 	"total_steps": 3,
 	"warmup_steps": 1
+    },
+    "h100_32b_medium": {
+        "host_mem_gb": [288, 320, 352, 384, 416],
+        "device_mem_gb": [30, 40, 50, 60, 70, 77],
+        "seq_len": [32768, 65536, 131072],
+        "model_size": [32],
+        "start_run_ind": 0,
+        "total_steps": 3,
+        "warmup_steps": 1
     }
 }
