--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -206,6 +206,15 @@
         "total_steps": 3,
         "warmup_steps": 1
     },
+    "h100_15b_long": {
+        "host_mem_gb": [192, 256, 320, 384, 448],
+        "device_mem_gb": [30, 40, 50, 60, 70, 77],
+        "seq_len": [262144, 524288, 1048576],
+        "model_size": [15],
+        "start_run_ind": 0,
+        "total_steps": 3,
+        "warmup_steps": 1
+    },
     "h100_32b_short": {
     	"host_mem_gb": [224, 256, 288, 320, 356],
 	"device_mem_gb": [30, 40, 50, 60, 70, 77],
