--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -234,9 +234,9 @@
         "warmup_steps": 1
     },
     "h100_32b_long": {
-   	"host_mem_gb": [320, 352, 384, 416, 448, 480],
+   	"host_mem_gb": [464, 472, 480, 488, 506],
 	"device_mem_gb": [30, 40, 50, 60, 70, 77],
-	"seq_len": [262144, 524288],
+	"seq_len": [262144],
         "model_size": [32],
         "start_run_ind": 0,
         "total_steps": 3,
