--- a/bench/reproduce_results/experiment_sweep_config.json
+++ b/bench/reproduce_results/experiment_sweep_config.json
@@ -62,6 +62,15 @@
         "total_steps": 4,
         "warmup_steps": 1
     },
+    "h100_8b_1m": {
+        "host_mem_gb": [448, 464, 480, 496],
+        "device_mem_gb": [24, 30, 40, 50, 60, 70, 77],
+        "seq_len": [1048576],
+        "model_size": [8],
+        "start_run_ind": 0,
+        "total_steps": 2,
+        "warmup_steps": 1
+    },
     "a100_1b_short": {
         "host_mem_gb": [16, 24, 32, 40, 48],
         "device_mem_gb": [16, 20, 24, 28, 32, 78],
