--- a/test/dataflow_models/Makefile
+++ b/test/dataflow_models/Makefile
@@ -30,7 +30,7 @@ ALL_INCLUDES = -I${DATAFLOW_LIB_INCLUDE_DIR} -I${CUDA_DATAFLOW_BACKEND_INCLUDE_D
 ALL_LIBS = -lm -pthread -ldl -L${DATAFLOW_LIB_DIR} -L${CUDA_DATAFLOW_BACKEND_LIB_DIR} -L${DATAFLOW_OPS_LIB_DIR} -L${DATAFLOW_MODELS_LIB_DIR} -L${HOST_OPS_LIB_DIR} ${DATAFLOW_LIB} ${CUDA_DATAFLOW_BACKEND_LIBS} ${DATAFLOW_OPS_LIB} ${DATAFLOW_MODELS_LIB} ${HOST_OPS_LIB} -Wl,-rpath,${DATAFLOW_LIB_DIR} -Wl,-rpath,${CUDA_DATAFLOW_BACKEND_LIB_DIR} -Wl,-rpath,${DATAFLOW_OPS_LIB_DIR} -Wl,-rpath,${DATAFLOW_MODELS_LIB_DIR} -Wl,-rpath,${HOST_OPS_LIB_DIR}
 
 #EXECS = naiveTransformer transformerHostAccumOpt transformerHostOpt  transformerRecompute transformer
-EXECS = transformer transformerNoRecompute
+EXECS = transformer transformerMoE transformerNoRecompute
 
 all: create_data_dirs ${EXECS}
 
@@ -61,6 +61,9 @@ create_data_dirs:
 
 ## version where activations can exceed host memory capacity and we selectively decide which acts to save, and if not saved then recompute before doing bwds...
 transformer: transformer.c
+	${CC} ${CFLAGS} ${ALL_INCLUDES} $^ -o $@ ${ALL_LIBS}
+
+transformerMoE: transformer_moe.c
 	${CC} ${CFLAGS} ${ALL_INCLUDES} $^ -o $@ ${ALL_LIBS}
 
 ## version where host just stores temporary data and all ops are on device
