Working on testing, MoE. However need router to be in fp32 to get consistent results vs. torch; otherwise the router logits are too close together and precision matters

--- a/libdataflowops/Makefile
+++ b/libdataflowops/Makefile
@@ -9,7 +9,7 @@ ALL_INCLUDE_DIRS = -I${DATAFLOW_LIB_INCLUDE_DIR} -I${SELF_INCLUDE_DIR}
 
 DATAFLOW_SET_OPS_OBJS = objs/set_op_skeletons.o
 
-DATAFLOW_SUBMIT_OPS_OBJS = objs/attention_op.o objs/attn_misc_ops.o objs/matmul_op.o objs/mlp_misc_ops.o objs/moe_ops.o objs/norm_ops.o objs/preprocess_ops.o objs/loss_misc_ops.o objs/optimizer_ops.o objs/host_ops.o
+DATAFLOW_SUBMIT_OPS_OBJS = objs/cast_ops.o objs/attention_op.o objs/attn_misc_ops.o objs/matmul_op.o objs/mlp_misc_ops.o objs/moe_ops.o objs/norm_ops.o objs/preprocess_ops.o objs/loss_misc_ops.o objs/optimizer_ops.o objs/host_ops.o
 
 DATAFLOW_OP_OBJS = ${DATAFLOW_SET_OPS_OBJS} ${DATAFLOW_SUBMIT_OPS_OBJS}
 
@@ -25,6 +25,9 @@ lib/${DATAFLOW_OP_LIB}: ${DATAFLOW_OP_OBJS}
 
 
 ## submit ops objs
+
+objs/cast_ops.o: src/submit_ops/cast_ops.c
+	${CC} ${CFLAGS} ${ALL_INCLUDE_DIRS} -c $< -o $@
 
 objs/attention_op.o: src/submit_ops/attention_op.c
 	${CC} ${CFLAGS} ${ALL_INCLUDE_DIRS} -c $< -o $@
