--- a/models/32b_config.json
+++ b/models/32b_config.json
@@ -1,6 +1,7 @@
 {
     "embed_dtype": "bf16",
     "attn_dtype": "bf16",
+    "router_dtype": "none",
     "expert_dtype": "bf16",
     "head_dtype": "bf16",
     "vocab_size": 152064,
