--- a/models/30b_3b_moe_config.json
+++ b/models/30b_3b_moe_config.json
@@ -4,19 +4,19 @@
     "router_dtype": "bf16",
     "expert_dtype": "bf16",
     "head_dtype": "bf16",
-    "vocab_size": 128256,
-    "model_dim": 3072,
-    "n_layers": 12,
-    "n_heads": 24,
-    "n_kv_heads": 6,
+    "vocab_size": 151936,
+    "model_dim": 2048,
+    "n_layers": 48,
+    "n_heads": 32,
+    "n_kv_heads": 4,
     "qk_norm_type": "none",
     "qk_norm_weight_type": "none",
     "num_shared_experts": 0,
-    "num_routed_experts": 64,
-    "top_k_routed_experts": 4,
+    "num_routed_experts": 128,
+    "top_k_routed_experts": 8,
     "expert_dim": 768,
     "expert_mlp_type": "swiglu",
-    "rope_theta": 500000,
+    "rope_theta": 1000000,
     "rms_norm_epsilon": 1e-5,
     "rand_seed": 42
 }
