--- a/models/11b_1b_moe_config.json
+++ b/models/11b_1b_moe_config.json
@@ -4,17 +4,18 @@
     "router_dtype": "bf16",
     "expert_dtype": "bf16",
     "head_dtype": "bf16",
-    "vocab_size": 129280,
-    "model_dim": 7168,
-    "n_layers": 3,
-    "n_heads": 56,
-    "n_kv_heads": 8,
+    "vocab_size": 81920,
+    "model_dim": 1536,
+    "head_dim": 128,
+    "n_layers": 24,
+    "n_heads": 12,
+    "n_kv_heads": 4,
     "qk_norm_type": "none",
     "qk_norm_weight_type": "none",
     "num_shared_experts": 0,
-    "num_routed_experts": 256,
-    "top_k_routed_experts": 8,
-    "expert_dim": 2048,
+    "num_routed_experts": 64,
+    "top_k_routed_experts": 4,
+    "expert_dim": 1536,
     "expert_mlp_type": "swiglu",
     "rope_theta": 1000000,
     "rms_norm_epsilon": 1e-5,
