--- a/models/15b_config.json
+++ b/models/15b_config.json
@@ -6,6 +6,7 @@
     "head_dtype": "bf16",
     "vocab_size": 128256,
     "model_dim": 4096,
+    "head_dim": 128,
     "n_layers": 64,
     "n_heads": 32,
     "n_kv_heads": 8,
